--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ ma_sitios_filtered.csv
 dataset_final.csv
 rp_vistas_c.csv
 .ipynb_checkpoints/
+datos_formulario.csv
+info_top_macs.csv
+macs_tops_usuarios.csv
+DBs/
